add view profile to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
             <ul>
                 <li><a href="{% url 'auth_users:dashboard' %}">Dashboard</a></li>
                 <li><a href="{% url 'auth_users:user-logout' %}">Logout</a></li>
+                <li><a href="{% url 'profiles:view_profile' %}">View Profile</a></li>
             </ul>
         </nav>
     </header>
