add edit btn and make img top of the page

--- a/apps/profiles/templates/profile_view.html
+++ b/apps/profiles/templates/profile_view.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}View Profile{% endblock %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/profile_view.css' %}">
+{% endblock %}
+
 {% block content %}
 <h2>Profile</h2>
+{% if profile.avatar %}
+    <img src="{{ profile.avatar.url }}" alt="Profile Avatar" style="max-width: 150px;">
+{% endif %}
 <p><strong>Age:</strong> {{ profile.age }}</p>
 <p><strong>Gender:</strong> {{ profile.gender }}</p>
 <p><strong>Height:</strong> {{ profile.height }} cm</p>
@@ -15,7 +23,11 @@
 <p><strong>Health Conditions:</strong> {{ profile.health_conditions }}</p>
 <p><strong>Fitness Goals:</strong> {{ profile.fitness_goals }}</p>
 <p><strong>Dietary Preferences:</strong> {{ profile.dietary_preferences }}</p>
-{% if profile.avatar %}
-    <img src="{{ profile.avatar.url }}" alt="Profile Avatar" style="max-width: 150px;">
-{% endif %}
+
+
+<!-- Add Edit Profile button -->
+<p>
+    <a href="{% url 'profiles:edit_profile' %}" class="btn btn-primary">Edit Profile</a>
+</p>
+
 {% endblock %}
