--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% comment %} # base.html {% endcomment %}
+{% comment %} # base.html
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -39,4 +39,51 @@
     {% block extra_js %}
     {% endblock %}
 </body>
+</html> {% endcomment %}
+
+
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Eazy Fit{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% block extra_css %}{% endblock %}
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="{% url 'auth_users:dashboard' %}">Dashboard</a></li>
+                <li>
+                    {% if request.user.is_authenticated %}
+                        {% if request.user.is_client %}
+                            <a href="{% url 'profiles:view_profile' %}">View Client Profile</a>
+                        {% elif request.user.is_coach %}
+                            <a href="{% url 'profiles:view_coach_profile' %}">View Coach Profile</a>
+                        {% endif %}
+                    {% endif %}
+                </li>
+                <li><a href="{% url 'auth_users:user-logout' %}" id="logout-button">Logout</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        {% block content %}{% endblock %}
+    </main>
+    <script src="{% static 'js/auth_jwt.js' %}"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
+
+    <script>
+        document.getElementById('logout-button').addEventListener('click', function(event) {
+            event.preventDefault(); // Prevent the default link behavior
+            logout(); // Call the logout function from auth_jwt.js
+        });
+    </script>
+
+    {% block extra_js %}{% endblock %}
+</body>
 </html>
+
