fix logout error

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="{% url 'auth_users:dashboard' %}">Dashboard</a></li>
 <!--                <li><a href="{% url 'auth_users:user-logout' %}">Logout</a></li>-->
-                <li><a href="{% url 'auth_users:user-logout' %}" id="logout-button">Logout</a></li> <!-- Added ID here -->
+                <li><a href="{% url 'auth_users:api-user-logout' %}" id="logout-button">Logout</a></li> <!-- Added ID here -->
                 <li><a href="{% url 'profiles:view_profile' %}">View Profile</a></li>
             </ul>
         </nav>
