--- a/apps/profiles/templates/profiles/coach/coach_profile_view.html
+++ b/apps/profiles/templates/profiles/coach/coach_profile_view.html
@@ -62,6 +62,13 @@
     <!-- Certifications -->
     <div class="certifications">
         <h3>Certifications</h3>
+
+        {% if request.user == profile.user %}
+            <div class="pictures-btn">
+                <a href="{% url 'profiles:view_coach_certifications' %}" class="btn btn-secondary">Manage Certifications</a>
+            </div>
+            {% endif %}
+
         <div class="certifications-list">
             {% for certification in profile.certifications.all %}
             <div class="certification-item">
